feat: add avatar, profile

--- a/index.html
+++ b/index.html
@@ -39,7 +39,28 @@
       </div>
     </header>
     <main class="main">
-      <div class="container"></div>
+      <div class="main-container">
+      <div class="container main-left-container">
+        <section class="header_avatar">
+          <img src="assets/img/p1.jpg" class="avatar" alt="Header_avatar">
+        </section>
+        <section class="section" id="contacts">
+          <h2 class="section-title">Contacts</h2>
+        </section>
+
+      </div>
+      <div class="container main-right-container" >
+        <section class="profile-title">
+          <h1 class="section-title main-title">
+            Inga Moshkareva
+          </h1>
+          <h3 class="section-subtitle">Junior Front-End Developer</h3>
+        </section>
+        <section class="section" id="about-me">
+          <h2 class="section-title">About Me</h2>
+        </section>
+      </div>
+    </div>
     </main>
     <footer class="footer">
       <div class="container"></div>
