--- a/index.html
+++ b/index.html
@@ -40,30 +40,95 @@
     </header>
     <main class="main">
       <div class="main-container">
-      <div class="container main-left-container">
-        <section class="header_avatar">
-          <img src="assets/img/p1.jpg" class="avatar" alt="Header_avatar">
+        <section class="section header-avatar">
+          <img src="assets/img/p1.jpg" class="avatar" alt="Header_avatar" />
         </section>
-        <section class="section" id="contacts">
-          <h2 class="section-title">Contacts</h2>
-        </section>
-
-      </div>
-      <div class="container main-right-container" >
         <section class="profile-title">
-          <h1 class="section-title main-title">
-            Inga Moshkareva
-          </h1>
+          <h1 class="section-title main-title">Inga Moshkareva</h1>
           <h3 class="section-subtitle">Junior Front-End Developer</h3>
         </section>
-        <section class="section" id="about-me">
-          <h2 class="section-title">About Me</h2>
+      </div>
+
+      <div class="container main-left-container">
+        <section class="section" id="contacts">
+          <h2 class="section-title">Contacts</h2>
+          <ul class="section-list">
+            <li class="section-item contacts-item">Minsk, Belarus</li>
+            <li class="section-item contacts-item">Telegram: @Inga_muse</li>
+            <li class="section-item contacts-item">
+              Email: ingamoshkareva@gmail.com
+            </li>
+            <li class="section-item contacts-item">GitHub: IngaMuse</li>
+            <li class="section-item contacts-item">Discord: IngaM</li>
+          </ul>
+        </section>
+        <section class="section" id="skills">
+          <h2 class="section-title">Skills</h2>
+          <ul class="section-list">
+            <li class="section-item">HTML</li>
+            <li class="section-item">CSS/SASS</li>
+            <li class="section-item">JavaScript (Basic)</li>
+            <li class="section-item">Git</li>
+            <li class="section-item">SQL (Basic)</li>
+            <li class="section-item">Java (Basic)</li>
+          </ul>
+        </section>
+        <section class="section" id="english">
+          <h2 class="section-title">English</h2>
+          <p>English test result(EPAM): <b>A2</b></p>
         </section>
       </div>
-    </div>
+      <div class="container main-right-container">
+        <section class="section" id="about-me">
+          <h2 class="section-title">About Me</h2>
+          <p>
+            I have good interpersonal skills, I am an excellent team worker and
+            very willing to learn and develop my new skills. I am able to
+            analyze and optimize work processes. I have management and training
+            skills. I have a critical view of the world, am responsible,
+            attentive to detail. I approach my work with love and pleasure.
+          </p>
+        </section>
+        <section class="section" id="education">
+          <h2 class="section-title">Education</h2>
+          <ul class="section-list">
+            <li class="section-item">University:
+              <span>Belarusian State Economic University, Bachelor, Accounting</span>
+            </li>
+            <li class="section-item">Courses:
+              <li class="courses-item">HTML and CSS Tutorials on the [Хекслет](https://ru.code-basics.com/)</li>
+              <li class="courses-item">Testing (EPAM)</li>
+              <li class="courses-item">Java SE, EE (Senla)</li>
+              <li class="courses-item">JavaScript Manual on [learnjavascript.ru](https://learn.javascript.ru/) (in progress)</li>
+              <li class="courses-item">RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+            </li>
+          </ul>
+        </section>
+<section class="section" id="experience">
+  <h2 class="section-title">Experience</h2>
+  <p>Tester(2015-2021)</p>
+</section>
+<section class="section" id="code-example">
+  <h2 class="section-title">Code Example</h2>
+  <pre class="pre">
+    <code>function sum(a, b) {
+      return a + b;
+    }
+    let result = sum(1, 2);
+    alert( result );</code>
+  </pre>
+</section>
+      </div>
     </main>
     <footer class="footer">
-      <div class="container"></div>
+      <div class="container footer-container">
+        <div>
+        © 2022 
+        <a href="https://github.com/IngaMuse" class="github nav-link">IngaMuse</a>
+      </div>
+      <a href="https://rs.school/js/" class="rss"></a>
+      </div>
+
     </footer>
   </body>
 </html>
