feat: add css style

--- a/index.html
+++ b/index.html
@@ -53,13 +53,21 @@
         <section class="section" id="contacts">
           <h2 class="section-title">Contacts</h2>
           <ul class="section-list">
-            <li class="section-item contacts-item">Minsk, Belarus</li>
-            <li class="section-item contacts-item">Telegram: @Inga_muse</li>
-            <li class="section-item contacts-item">
-              Email: ingamoshkareva@gmail.com
+            <li class="contacts-item">
+              <div class="contacts-image contacts-image-map"></div>
+              <div class="contacts-text"> Minsk, Belarus</div></li>
+            <li class=" contacts-item"><div class="contacts-image contacts-image-telega"></div>
+              <div class="contacts-text"> Telegram: <a href="https://t.me/Inga_muse" title="Telegram">@Inga_muse</a></div></li></li>
+            <li class=" contacts-item">
+              <div class="contacts-image contacts-image-email"></div>
+              <div class="contacts-text"> Email: <a href="mailto:ingamoshkareva@gmail.com" title="Email">ingamoshkareva@gmail.com</a></div>
             </li>
-            <li class="section-item contacts-item">GitHub: IngaMuse</li>
-            <li class="section-item contacts-item">Discord: IngaM</li>
+            <li class="contacts-item"><div class="contacts-image contacts-image-github"></div>
+              <div class="contacts-text"> GitHub: <a href="https://github.com/IngaMuse" title="GitHub">IngaMuse</a></div>
+            </li>
+            <li class="contacts-item"><div class="contacts-image contacts-image-discord"></div>
+              <div class="contacts-text"> Discord: <a href="https://discord.com" title="Discord">IngaM</a></div>
+            </li>
           </ul>
         </section>
         <section class="section" id="skills">
@@ -96,26 +104,28 @@
               <span>Belarusian State Economic University, Bachelor, Accounting</span>
             </li>
             <li class="section-item">Courses:
-              <li class="courses-item">HTML and CSS Tutorials on the [Хекслет](https://ru.code-basics.com/)</li>
-              <li class="courses-item">Testing (EPAM)</li>
-              <li class="courses-item">Java SE, EE (Senla)</li>
-              <li class="courses-item">JavaScript Manual on [learnjavascript.ru](https://learn.javascript.ru/) (in progress)</li>
-              <li class="courses-item">RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+              <li class="section-item courses-item">HTML and CSS Tutorials on the <a href="https://ru.code-basics.com/">Hexlet</a></li>
+              <li class="section-item courses-item">Testing (EPAM)</li>
+              <li class="section-item courses-item">Java SE, EE (Senla)</li>
+              <li class="section-item courses-item">JavaScript Manual on <a href="https://learn.javascript.ru/">Learnjavascript</a> (in progress)</li>
+              <li class="section-item courses-item">RS Schools Course <a href="https://rs.school/js-stage0/">«JavaScript/Front-end.Stage 0»</a> (in progress)</li>
             </li>
           </ul>
         </section>
 <section class="section" id="experience">
   <h2 class="section-title">Experience</h2>
-  <p>Tester(2015-2021)</p>
+  <div class="experience">
+  <div class="date">2015-2021</div>
+  <p>Tester</p></div>
 </section>
 <section class="section" id="code-example">
   <h2 class="section-title">Code Example</h2>
   <pre class="pre">
-    <code>function sum(a, b) {
-      return a + b;
-    }
-    let result = sum(1, 2);
-    alert( result );</code>
+<code>function sum(a, b) {
+return a + b;
+}
+let result = sum(1, 2);
+alert(result);</code>
   </pre>
 </section>
       </div>
