--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     </header>
     <main class="main">
       <div class="main-container">
-        <section class="section header-avatar">
+        <div class="section header-avatar">
           <img src="assets/img/p1.jpg" class="avatar" alt="Header_avatar" />
-        </section>
+        </div>
         <section class="profile-title">
           <h1 class="section-title main-title">Inga Moshkareva</h1>
           <h3 class="section-subtitle">Junior Front-End Developer</h3>
@@ -54,18 +54,38 @@
           <ul class="section-list">
             <li class="contacts-item">
               <div class="contacts-image contacts-image-map"></div>
-              <div class="contacts-text"> Minsk, Belarus</div></li>
-            <li class=" contacts-item"><div class="contacts-image contacts-image-telega"></div>
-              <div class="contacts-text"> Telegram: <a href="https://t.me/Inga_muse" title="Telegram">@Inga_muse</a></div></li></li>
-            <li class=" contacts-item">
+              <div class="contacts-text">Minsk, Belarus</div>
+            </li>
+            <li class="contacts-item">
+              <div class="contacts-image contacts-image-telega"></div>
+              <div class="contacts-text">
+                Telegram:
+                <a href="https://t.me/Inga_muse" title="Telegram">@Inga_muse</a>
+              </div>
+            </li>
+            <li class="contacts-item">
               <div class="contacts-image contacts-image-email"></div>
-              <div class="contacts-text"> Email: <a href="mailto:ingamoshkareva@gmail.com" title="Email">ingamoshkareva@gmail.com</a></div>
+              <div class="contacts-text">
+                Email:
+                <a href="mailto:ingamoshkareva@gmail.com" title="Email"
+                  >ingamoshkareva@gmail.com</a
+                >
+              </div>
             </li>
-            <li class="contacts-item"><div class="contacts-image contacts-image-github"></div>
-              <div class="contacts-text"> GitHub: <a href="https://github.com/IngaMuse" title="GitHub">IngaMuse</a></div>
+            <li class="contacts-item">
+              <div class="contacts-image contacts-image-github"></div>
+              <div class="contacts-text">
+                GitHub:
+                <a href="https://github.com/IngaMuse" title="GitHub"
+                  >IngaMuse</a
+                >
+              </div>
             </li>
-            <li class="contacts-item"><div class="contacts-image contacts-image-discord"></div>
-              <div class="contacts-text"> Discord: <a href="https://discord.com" title="Discord">IngaM</a></div>
+            <li class="contacts-item">
+              <div class="contacts-image contacts-image-discord"></div>
+              <div class="contacts-text">
+                Discord: <a href="https://discord.com" title="Discord">IngaM</a>
+              </div>
             </li>
           </ul>
         </section>
@@ -99,43 +119,62 @@
         <section class="section" id="education">
           <h2 class="section-title">Education</h2>
           <ul class="section-list">
-            <li class="section-item">University:
-              <span>Belarusian State Economic University, Bachelor, Accounting</span>
+            <li class="section-item">
+              University:
+              <span
+                >Belarusian State Economic University, Bachelor,
+                Accounting</span
+              >
             </li>
-            <li class="section-item">Courses:
-              <li class="section-item courses-item">HTML and CSS Tutorials on the <a href="https://ru.code-basics.com/">Hexlet</a></li>
-              <li class="section-item courses-item">Testing (EPAM)</li>
-              <li class="section-item courses-item">Java SE, EE (Senla)</li>
-              <li class="section-item courses-item">JavaScript Manual on <a href="https://learn.javascript.ru/">Learnjavascript</a> (in progress)</li>
-              <li class="section-item courses-item">RS Schools Course <a href="https://rs.school/js-stage0/">«JavaScript/Front-end.Stage 0»</a> (in progress)</li>
+            < class="section-item">Courses:
+            <li class="section-item courses-item">
+              HTML and CSS Tutorials on the
+              <a href="https://ru.code-basics.com/">Hexlet</a>
+            </li>
+            <li class="section-item courses-item">Testing (EPAM)</li>
+            <li class="section-item courses-item">Java SE, EE (Senla)</li>
+            <li class="section-item courses-item">
+              JavaScript Manual on
+              <a href="https://learn.javascript.ru/">Learnjavascript</a> (in
+              progress)
+            </li>
+            <li class="section-item courses-item">
+              RS Schools Course
+              <a href="https://rs.school/js-stage0/"
+                >«JavaScript/Front-end.Stage 0»</a
+              >
+              (in progress)
             </li>
           </ul>
         </section>
-<section class="section" id="experience">
-  <h2 class="section-title">Experience</h2>
-  <div class="experience">
-  <div class="date">2015-2021</div>
-  <p>Tester</p></div>
-</section>
-<section class="section" id="code-example">
-  <h2 class="section-title">Code Example</h2>
-  <pre class="pre">
+        <section class="section" id="experience">
+          <h2 class="section-title">Experience</h2>
+          <div class="experience">
+            <div class="date">2015-2021</div>
+            <p>Tester</p>
+          </div>
+        </section>
+        <section class="section" id="code-example">
+          <h2 class="section-title">Code Example</h2>
+          <pre class="pre">
 <code>function sum(a, b) {
 return a + b;
 }
 let result = sum(1, 2);
 alert(result);</code>
   </pre>
-</section>
+        </section>
       </div>
     </main>
     <footer class="footer">
       <div class="container footer-container">
         <div>
-        © 2022 
-        <a href="https://github.com/IngaMuse" class="github nav-link">IngaMuse</a>
-      </div>
-      <a href="https://rs.school/js/" class="rss"></a>
+          © 2022
+          <a href="https://github.com/IngaMuse" class="github nav-link"
+            >IngaMuse</a
+          >
+        </div>
+        <a href="https://rs.school/js/" class="rss"></a>
       </div>
     </footer>
   </body>
