--- a/index.html
+++ b/index.html
@@ -126,24 +126,28 @@
                 Accounting</span
               >
             </li>
-            < class="section-item">Courses:
-            <li class="section-item courses-item">
-              HTML and CSS Tutorials on the
-              <a href="https://ru.code-basics.com/">Hexlet</a>
-            </li>
-            <li class="section-item courses-item">Testing (EPAM)</li>
-            <li class="section-item courses-item">Java SE, EE (Senla)</li>
-            <li class="section-item courses-item">
-              JavaScript Manual on
-              <a href="https://learn.javascript.ru/">Learnjavascript</a> (in
-              progress)
-            </li>
-            <li class="section-item courses-item">
-              RS Schools Course
-              <a href="https://rs.school/js-stage0/"
-                >«JavaScript/Front-end.Stage 0»</a
-              >
-              (in progress)
+            <li class="section-item">
+              Courses:
+              <ul class="section-list">
+                <li class="section-item courses-item">
+                  HTML and CSS Tutorials on the
+                  <a href="https://ru.code-basics.com/">Hexlet</a>
+                </li>
+                <li class="section-item courses-item">Testing (EPAM)</li>
+                <li class="section-item courses-item">Java SE, EE (Senla)</li>
+                <li class="section-item courses-item">
+                  JavaScript Manual on
+                  <a href="https://learn.javascript.ru/">Learnjavascript</a> (in
+                  progress)
+                </li>
+                <li class="section-item courses-item">
+                  RS Schools Course
+                  <a href="https://rs.school/js-stage0/"
+                    >«JavaScript/Front-end.Stage 0»</a
+                  >
+                  (in progress)
+                </li>
+              </ul>
             </li>
           </ul>
         </section>
