fix:center scale

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     </header>
     <main class="main">
       <div class="main-container">
-        <div class="section header-avatar">
+        <div class="container section header-avatar">
           <img src="assets/img/p1.jpg" class="avatar" alt="Header_avatar" />
         </div>
-        <section class="profile-title">
+        <section class="container profile-title">
           <h1 class="section-title main-title">Inga Moshkareva</h1>
           <h3 class="section-subtitle">Junior Front-End Developer</h3>
         </section>
